crates/preprocessor/tests/snapshots/main__macro_expansion_4.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 678
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%1,%2) %1 + %2
int foo = 1 + 2;

