crates/preprocessor/tests/snapshots/main__macro_expansion_5-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 591
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      19,
      16,
      19
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      21,
      22,
      21,
      22
    ],
    [
      27,
      30,
      27,
      30
    ],
    [
      30,
      31,
      30,
      31
    ],
    [
      32,
      35,
      32,
      35
    ],
    [
      36,
      37,
      35,
      36
    ]
  ],
  "expanded_symbols": []
}
