crates/preprocessor/tests/snapshots/main__macro_expansion_5.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 690
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%1) int %1
int foo, bar;

