crates/preprocessor/tests/snapshots/main__macro_expansion_6-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 604
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      17,
      8,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      21,
      22,
      21,
      22
    ],
    [
      22,
      23,
      22,
      23
    ],
    [
      23,
      24,
      23,
      24
    ],
    [
      25,
      27,
      25,
      27
    ],
    [
      31,
      37,
      31,
      37
    ],
    [
      38,
      39,
      38,
      39
    ],
    [
      39,
      40,
      39,
      40
    ],
    [
      41,
      44,
      41,
      44
    ],
    [
      44,
      45,
      44,
      45
    ],
    [
      45,
      46,
      45,
      46
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      47,
      48,
      47,
      48
    ],
    [
      48,
      49,
      48,
      49
    ],
    [
      50,
      52,
      50,
      52
    ],
    [
      60,
      61,
      60,
      61
    ],
    [
      61,
      62,
      61,
      62
    ],
    [
      63,
      64,
      63,
      64
    ],
    [
      64,
      65,
      64,
      65
    ],
    [
      66,
      68,
      66,
      68
    ],
    [
      76,
      80,
      76,
      80
    ],
    [
      80,
      81,
      80,
      81
    ],
    [
      81,
      89,
      81,
      89
    ],
    [
      89,
      90,
      89,
      90
    ],
    [
      90,
      94,
      90,
      94
    ],
    [
      95,
      98,
      95,
      98
    ],
    [
      99,
      100,
      99,
      100
    ],
    [
      100,
      101,
      100,
      101
    ],
    [
      101,
      102,
      101,
      102
    ],
    [
      102,
      103,
      102,
      103
    ],
    [
      104,
      105,
      104,
      105
    ],
    [
      105,
      106,
      105,
      106
    ],
    [
      106,
      107,
      106,
      107
    ],
    [
      108,
      110,
      108,
      110
    ],
    [
      118,
      124,
      118,
      124
    ],
    [
      125,
      126,
      125,
      126
    ],
    [
      126,
      127,
      126,
      127
    ],
    [
      127,
      128,
      127,
      128
    ],
    [
      156,
      160,
      141,
      145
    ],
    [
      162,
      165,
      149,
      152
    ],
    [
      156,
      160,
      163,
      167
    ]
  ],
  "expanded_symbols": []
}
