crates/preprocessor/tests/snapshots/main__macro_expansion_7-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      15,
      16,
      15,
      16
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      22,
      23,
      22,
      23
    ],
    [
      24,
      25,
      24,
      25
    ],
    [
      25,
      26,
      25,
      26
    ],
    [
      27,
      34,
      27,
      34
    ],
    [
      35,
      38,
      35,
      38
    ],
    [
      38,
      39,
      38,
      39
    ],
    [
      39,
      40,
      39,
      40
    ],
    [
      40,
      41,
      40,
      41
    ],
    [
      41,
      42,
      41,
      42
    ],
    [
      42,
      43,
      42,
      43
    ],
    [
      43,
      44,
      43,
      44
    ],
    [
      44,
      45,
      44,
      45
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      48,
      49,
      48,
      49
    ],
    [
      50,
      53,
      50,
      53
    ],
    [
      53,
      54,
      53,
      54
    ],
    [
      54,
      55,
      54,
      55
    ],
    [
      55,
      56,
      55,
      56
    ],
    [
      56,
      57,
      56,
      57
    ],
    [
      58,
      59,
      58,
      59
    ],
    [
      59,
      60,
      59,
      60
    ],
    [
      60,
      61,
      60,
      61
    ],
    [
      62,
      65,
      62,
      65
    ],
    [
      66,
      69,
      66,
      69
    ],
    [
      70,
      71,
      70,
      71
    ],
    [
      76,
      77,
      76,
      77
    ],
    [
      79,
      80,
      80,
      81
    ],
    [
      82,
      82,
      82,
      82
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 72,
        "end": 81
      },
      "expanded_range": {
        "start": 71,
        "end": 81
      },
      "idx": 1,
      "file_id": 0
    }
  ]
}
