crates/preprocessor/tests/snapshots/main__macro_no_expansion_2-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      20,
      26,
      20,
      26
    ],
    [
      27,
      31,
      27,
      31
    ],
    [
      32,
      45,
      32,
      45
    ],
    [
      45,
      46,
      45,
      46
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      48,
      49,
      48,
      49
    ],
    [
      54,
      67,
      54,
      67
    ],
    [
      67,
      68,
      67,
      68
    ],
    [
      68,
      71,
      68,
      71
    ],
    [
      80,
      81,
      80,
      81
    ],
    [
      81,
      84,
      81,
      84
    ],
    [
      84,
      85,
      84,
      85
    ],
    [
      85,
      86,
      85,
      86
    ],
    [
      86,
      87,
      86,
      87
    ],
    [
      88,
      89,
      88,
      89
    ],
    [
      90,
      90,
      90,
      90
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 68,
        "end": 71
      },
      "expanded_range": {
        "start": 68,
        "end": 72
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
