crates/preprocessor/tests/snapshots/main__macro_no_expansion_4-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 680
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      26,
      19,
      26
    ],
    [
      27,
      30,
      27,
      30
    ],
    [
      30,
      31,
      30,
      31
    ],
    [
      31,
      32,
      31,
      32
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      33,
      34,
      33,
      34
    ],
    [
      35,
      36,
      35,
      36
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      44,
      38,
      44
    ],
    [
      45,
      49,
      45,
      49
    ],
    [
      50,
      63,
      50,
      63
    ],
    [
      63,
      64,
      63,
      64
    ],
    [
      64,
      65,
      64,
      65
    ],
    [
      66,
      67,
      66,
      67
    ],
    [
      72,
      85,
      72,
      85
    ],
    [
      85,
      86,
      85,
      86
    ],
    [
      90,
      93,
      86,
      89
    ],
    [
      94,
      95,
      89,
      90
    ],
    [
      95,
      96,
      90,
      91
    ],
    [
      97,
      98,
      92,
      93
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 86,
        "end": 89
      },
      "expanded_range": {
        "start": 86,
        "end": 90
      },
      "idx": 1,
      "file_id": 0
    }
  ]
}
